--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -69,7 +69,7 @@
     </main>
     <script>
         const API_BASE_URL = 'https://minha-api-produtos.onrender.com';
-        const ADMIN_TOKEN = 'seu_token_secreto'; // Substitua pelo token do .env
+        const ADMIN_TOKEN = '098457098457'; // Substitua pelo token do .env
 
         document.addEventListener('DOMContentLoaded', () => {
             // Manipulador de erro para imagens
@@ -233,3 +233,4 @@
     </script>
 </body>
 </html>
+
