--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 </head>
 <body>
+    <!-- O restante do HTML permanece igual, exceto pela seção de produtos gerada dinamicamente no script.js -->
     <header class="site-header">
         <div class="logo-container">
             <a href="#"><img src="/logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo"></a>
