--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 </head>
 <body>
-    <!-- O restante do HTML permanece igual, exceto pela seção de produtos gerada dinamicamente no script.js -->
     <header class="site-header">
         <div class="logo-container">
             <a href="#"><img src="/logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo"></a>
@@ -35,6 +34,7 @@
         <a href="/contato.html">Contato</a>
     </nav>
     <div class="container">
+        <button class="sidebar-toggle" onclick="toggleSidebar()">Mostrar Categorias</button>
         <aside class="sidebar-categorias">
             <h3>Categorias</h3>
             <ul>
