--- a/index.html
+++ b/index.html
@@ -1,97 +1,111 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Compre os melhores produtos em diversas lojas com o Centro de Compras.">
-  <meta property="og:title" content="Centro de Compras">
-  <meta property="og:description" content="Encontre os melhores produtos de lojas como Amazon, Mercado Livre e mais.">
-  <meta property="og:image" content="/logos/centrodecompras.jpg">
-  <meta property="og:url" content="https://www.centrodecompra.com.br">
-  <meta name="twitter:card" content="summary_large_image">
-  <title>Centro de Compras</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/style.css">
-  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ofertas com descontos reais nas principais lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliado seguros e atualizados.">
+    <meta property="og:title" content="Centro de Compras - Ofertas e Descontos">
+    <meta property="og:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+    <meta property="og:image" content="logos/centrodecompras.jpg">
+    <meta property="og:url" content="https://centrodecompra.com.br/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Centro de Compras - Ofertas e Descontos">
+    <meta name="twitter:description" content="Encontre as melhores ofertas em lojas como Amazon, Shein, Shopee, Magalu, Mercado Livre e Alibaba. Links de afiliados seguros e atualizados!">
+    <meta name="twitter:image" content="logos/centrodecompras.jpg">
+    <title>Centro de Compras - Ofertas do Dia</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img id="site-logo" src="/logos/centrodecompras.jpg" alt="Logo Centro de Compras" width="150">
-    <nav>
-      <a href="#" class="loja-todas ativa" data-loja="todas" onclick="filtrarPorLoja('todas')">Todas</a>
-      <a href="#" class="loja" data-loja="Amazon" onclick="filtrarPorLoja('Amazon')"><img src="/logos/amazon.png" alt="Amazon" width="20"></a>
-      <a href="#" class="loja" data-loja="Magalu" onclick="filtrarPorLoja('Magalu')"><img src="/logos/magalu.png" alt="Magalu" width="20"></a>
-      <a href="#" class="loja" data-loja="Shein" onclick="filtrarPorLoja('Shein')"><img src="/logos/shein.png" alt="Shein" width="20"></a>
-      <a href="#" class="loja" data-loja="Shopee" onclick="filtrarPorLoja('Shopee')"><img src="/logos/shopee.png" alt="Shopee" width="20"></a>
-      <a href="#" class="loja" data-loja="Mercado Livre" onclick="filtrarPorLoja('Mercado Livre')"><img src="/logos/mercadolivre.jpg" alt="Mercado Livre" width="20"></a>
-      <a href="#" class="loja" data-loja="Alibaba" onclick="filtrarPorLoja('Alibaba')"><img src="/logos/alibaba.png" alt="Alibaba" width="20"></a>
-    </nav>
-    <div class="search-bar">
-      <input type="text" id="busca" placeholder="Buscar produtos..." aria-label="Buscar produtos">
-    </div>
-  </header>
-  <main>
-    <div class="sidebar-categorias">
-      <button class="sidebar-toggle" onclick="toggleSidebar()">Mostrar Categorias</button>
-      <ul>
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')">Todas</li>
-        <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')">Eletrônicos</li>
-        <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')">Moda</li>
-        <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')">Casa e Decoração</li>
-        <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')">Esportes e Fitness</li>
-        <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')">Livros</li>
-        <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')">Beleza e Cuidados Pessoais</li>
-        <li class="categoria-item" data-categoria="brinquedos" onclick="filtrarPorCategoria('brinquedos')">Brinquedos e Jogos</li>
-        <li class="categoria-item" data-categoria="alimentos" onclick="filtrarPorCategoria('alimentos')">Alimentos e Bebidas</li>
-        <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')">Automotivo</li>
-        <li class="categoria-item" data-categoria="saude" onclick="filtrarPorCategoria('saude')">Saúde e Bem-Estar</li>
-        <li class="categoria-item" data-categoria="informatica" onclick="filtrarPorCategoria('informatica')">Informática</li>
-        <li class="categoria-item" data-categoria="bebes" onclick="filtrarPorCategoria('bebes')">Bebês</li>
-        <li class="categoria-item" data-categoria="joias" onclick="filtrarPorCategoria('joias')">Joias e Acessórios</li>
-        <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')">Pet</li>
-        <li class="categoria-item" data-categoria="outros" onclick="filtrarPorCategoria('outros')">Outros</li>
-      </ul>
-    </div>
-    <div class="content">
-      <div id="loading-spinner">
-        <i class="fas fa-spinner fa-spin"></i> Carregando...
-      </div>
-      <div id="error-message"></div>
-      <div id="mensagem-vazia" style="display: none;">Nenhum produto encontrado.</div>
-      <div id="grid-produtos" class="grid-produtos"></div>
-      <button id="load-more" style="display: none;">Carregar Mais</button>
-    </div>
-  </main>
-  <footer>
-    <div class="footer-content">
-      <div class="social-links">
-        <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank">
-          <div class="icon"><i class="fab fa-tiktok"></i></div><span>TikTok</span>
-        </a>
-        <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank">
-          <div class="icon"><i class="fab fa-instagram"></i></div><span>Instagram</span>
-        </a>
-        <a href="https://x.com/ComprasCdc" target="_blank">
-          <div class="icon"><i class="fab fa-x-twitter"></i></div><span>X</span>
-        </a>
-        <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank">
-          <div class="icon"><i class="fab fa-youtube"></i></div><span>YouTube</span>
-        </a>
-      </div>
-      <p>© <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
-    </div>
-  </footer>
-  <div id="imageModal" class="modal">
-    <span class="close" onclick="closeModal()">×</span>
-    <div class="modal-content">
-      <div id="modalCarrosselImagens" class="carrossel-imagens"></div>
-      <button id="modalPrev" class="carrossel-prev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</button>
-      <button id="modalNext" class="carrossel-next" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">►</button>
-      <div id="modalCarrosselDots" class="carrossel-dots"></div>
-    </div>
-  </div>
-  <script src="/constants.js"></script>
-  <script src="/script.js"></script>
+    <header class="site-header">
+        <div class="logo-container">
+            <a href="#"><img src="logos/centrodecompras.jpg" alt="Centro de Compras" loading="lazy" id="site-logo"></a>
+        </div>
+        <div class="header-text">
+            <h1>Centro de Compras</h1>
+            <p>O maior portal de ofertas do Brasil! Descubra as melhores oportunidades nos maiores sites de venda, com links diretos para sua compra.</p>
+        </div>
+    </header>
+    <nav>
+        <a href="index.html">Promoções</a>
+        <a href="cupom.html">Cupom de desconto</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+    </nav>
+    <div class="container">
+        <aside class="sidebar-categorias">
+            <h3>Categorias</h3>
+            <ul>
+                <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')" role="button" aria-label="Filtrar por Todas as Categorias">Todas as Categorias</li>
+                <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')" role="button" aria-label="Filtrar por Eletrônicos">Eletrônicos</li>
+                <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')" role="button" aria-label="Filtrar por Moda">Moda</li>
+                <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')" role="button" aria-label="Filtrar por Fitness">Fitness</li>
+                <li class="categoria-item" data-categoria="casa" onclick="filtrarPorCategoria('casa')" role="button" aria-label="Filtrar por Casa e Decoração">Casa e Decoração</li>
+                <li class="categoria-item" data-categoria="beleza" onclick="filtrarPorCategoria('beleza')" role="button" aria-label="Filtrar por Beleza">Beleza</li>
+                <li class="categoria-item" data-categoria="esportes" onclick="filtrarPorCategoria('esportes')" role="button" aria-label="Filtrar por Esportes">Esportes</li>
+                <li class="categoria-item" data-categoria="livros" onclick="filtrarPorCategoria('livros')" role="button" aria-label="Filtrar por Livros">Livros</li>
+                <li class="categoria-item" data-categoria="infantil" onclick="filtrarPorCategoria('infantil')" role="button" aria-label="Filtrar por Infantil">Infantil</li>
+                <li class="categoria-item" data-categoria="Celulares" onclick="filtrarPorCategoria('Celulares')" role="button" aria-label="Filtrar por Celulares">Celulares</li>
+                <li class="categoria-item" data-categoria="Eletrodomésticos" onclick="filtrarPorCategoria('Eletrodomésticos')" role="button" aria-label="Filtrar por Eletrodomésticos">Eletrodomésticos</li>
+                <li class="categoria-item" data-categoria="pet" onclick="filtrarPorCategoria('pet')" role="button" aria-label="Filtrar por Pet">Pet</li>
+                <li class="categoria-item" data-categoria="jardinagem" onclick="filtrarPorCategoria('jardinagem')" role="button" aria-label="Filtrar por Jardinagem">Jardinagem</li>
+                <li class="categoria-item" data-categoria="automotivo" onclick="filtrarPorCategoria('automotivo')" role="button" aria-label="Filtrar por Automotivo">Automotivo</li>
+                <li class="categoria-item" data-categoria="gastronomia" onclick="filtrarPorCategoria('gastronomia')" role="button" aria-label="Filtrar por Gastronomia">Gastronomia</li>
+                <li class="categoria-item" data-categoria="games" onclick="filtrarPorCategoria('games')" role="button" aria-label="Filtrar por Games">Games</li>
+            </ul>
+        </aside>
+        <main>
+            <section id="ofertas-section" aria-live="polite">
+                <h2 id="ofertas-titulo">🛍️ Ofertas do Dia</h2>
+                <div class="lojas-parceiras">
+                    <h3>🌟 Lojas Parceiras</h3>
+                    <div class="grid-lojas">
+                        <div class="loja-todas ativa" data-loja="todas" onclick="filtrarPorLoja('todas')" role="button" aria-label="Filtrar por Todas as Lojas"><span>Todas as Lojas</span></div>
+                        <div class="loja" data-loja="amazon" onclick="filtrarPorLoja('amazon')" role="button" aria-label="Filtrar por Amazon"><img src="logos/amazon.png" alt="Logo da Amazon" loading="lazy"></div>
+                        <div class="loja" data-loja="magalu" onclick="filtrarPorLoja('magalu')" role="button" aria-label="Filtrar por Magalu"><img src="logos/magalu.png" alt="Logo da Magalu" loading="lazy"></div>
+                        <div class="loja" data-loja="shein" onclick="filtrarPorLoja('shein')" role="button" aria-label="Filtrar por Shein"><img src="logos/shein.png" alt="Logo da Shein" loading="lazy"></div>
+                        <div class="loja" data-loja="shopee" onclick="filtrarPorLoja('shopee')" role="button" aria-label="Filtrar por Shopee"><img src="logos/shopee.png" alt="Logo da Shopee" loading="lazy"></div>
+                        <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" role="button" aria-label="Filtrar por Mercado Livre"><img src="logos/mercadolivre.jpg" alt="Logo do Mercado Livre" loading="lazy"></div>
+                        <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" role="button" aria-label="Filtrar por Alibaba"><img src="logos/alibaba.png" alt="Logo da Alibaba" loading="lazy"></div>
+                    </div>
+                </div>
+                <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Buscar produtos" aria-describedby="busca-instrucao">
+                <span id="busca-instrucao" style="display: none;">Digite o nome do produto para filtrar os resultados.</span>
+                <div class="loading-spinner" id="loading-spinner"></div>
+                <div class="grid-produtos" id="grid-produtos"></div>
+                <button id="load-more" onclick="carregarMaisProdutos()">Carregar Mais</button>
+                <p class="mensagem-vazia" id="mensagem-vazia" aria-live="polite">Nenhum produto encontrado.</p>
+                <p class="error-message" id="error-message" style="display: none;" aria-live="assertive"></p>
+            </section>
+            <a class="whatsapp" href="https://wa.me/5521975179737" target="_blank">📲 Atendimento via WhatsApp</a>
+            <a class="telegram" href="https://t.me/boost/centraldecomprascdc" target="_blank">📢 Canal no Telegram</a>
+            <div class="social-links">
+                <a href="https://www.tiktok.com/@cdc.centraldecompas?_t=ZM-8vYQlF9u1dH&_r=1" target="_blank"><div class="icon"><img src="logos/tiktok.png" alt="Ícone do TikTok" loading="lazy"></div><span>TikTok</span></a>
+                <a href="https://www.instagram.com/cdccentrodecompras/?utm_source=qr&r=nametag" target="_blank"><div class="icon"><img src="logos/instagram.png" alt="Ícone do Instagram" loading="lazy"></div><span>Instagram</span></a>
+                <a href="https://x.com/ComprasCdc" target="_blank"><div class="icon"><img src="logos/x.png" alt="Ícone do X" loading="lazy"></div><span>X</span></a>
+                <a href="https://www.youtube.com/channel/UCaKHlI-hWqwdAXS6Xsv3ZzA" target="_blank"><div class="icon"><img src="logos/youtube.png" alt="Ícone do YouTube" loading="lazy"></div><span>YouTube</span></a>
+            </div>
+        </main>
+    </div>
+    <div class="modal" id="imageModal">
+        <button class="modal-close" onclick="closeModal()">✕</button>
+        <div class="modal-content" id="modalCarrossel">
+            <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
+            <button class="carrossel-prev" id="modalPrev" onclick="moveModalCarrossel(-1)" aria-label="Imagem anterior">◄</button>
+            <button class="carrossel-next" id="modalNext" onclick="moveModalCarrossel(1)" aria-label="Próxima imagem">►</button>
+            <div class="carrossel-dots" id="modalCarrosselDots"></div>
+            <p class="modal-error" id="modalError" style="display: none; color: red; text-align: center;">Erro ao carregar imagens.</p>
+        </div>
+    </div>
+    <footer>
+        <p>🔧 Todos os direitos reservados <strong>Grupo Centro de Compra "CdC"</strong> © <span id="year"></span></p>
+    </footer>
+    <div class="robo-assistente">
+        <a href="https://wa.me/5521975179737" target="_blank">
+            <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem">
+            <div class="robo-texto">Posso ajudar?</div>
+        </a>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
